# new_flutter_project

./: pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle
backend/: .gitignore  pyproject.toml
backend/src/backend/: settings.py
firebase/: .firebaserc  .gitignore  Readme.md  firebase.json  firestore.rules  storage.rules
firebase/functions/: package-lock.json
firebase/functions/src/: index.ts
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart  qismati_app.dart  routes.dart  routing.dart
lib/common/: colors.dart
lib/common/models/: otp_nav_model.dart  profile.dart
lib/common/widgets/: custom_alert_dialog.dart  custom_button.dart  custom_drawer.dart  custom_dropdown_menu.dart  custom_nav_bar_item.dart  custom_snackbar.dart  custom_text_field.dart  custom_top_bar.dart  nav_bar.dart  notifications.dart  pin_input_field.dart
lib/core/database/: database_helper.dart  session.dart
lib/core/error/: exception.dart  global_exception.dart
lib/core/failurs/: failur.dart  global_failures.dart
lib/core/utils/: debouncer.dart  get_formated_name.dart  language_helper.dart  location.dart
lib/core/websocket/: websocket.dart
lib/data/: dummy_fetch.json
lib/domain/entity/: subscription.dart
lib/features/language/: current_data.dart
lib/features/nearyou/: profile_dummy.dart
lib/l10n/: intl_am.arb  intl_ar.arb  intl_en.arb  intl_om.arb  intl_so.arb
mobile/: firebase.json  pubspec.yaml
mobile/lib/: firebase_options.dart  main.dart  qismati_app.dart  routes.dart  routing.dart
test/: widget_test.dart
(+193 files in other folders)
