[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for a dating app."
authors = ["Nathnael Dereje <nathandere1357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
